--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>Nosso projeto consiste em criar uma micro estação meteorológica com a participação de todos dividindo em três grupos.</p>
       <p>
         <ul>
-            <li>Montagem.</li>
+            <li>Montagem</li>
             <li>Banco de dados.</li>
             <li>Página Web.</li>
         </ul>
