--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
   <div class="introdução">
     <main>
-      <h2 align="center"> Micro Estação Meteorológica</h2>
+      <h2 align="center"> Micro Estação Meteorológica.</h2>
       <p align="center"> <img src="https://static6.depositphotos.com/1007113/582/i/950/depositphotos_5822106-stock-photo-weather-station.jpg" alt="Ilustração do projeto" height="300" width="380"> 
       </p>
       <p>Nosso projeto consiste em criar uma micro estação meteorológica com a participação de todos dividindo em três grupos.</p>
       <p>
         <ul>
-            <li>Montagem</li>
+            <li>Montagem.</li>
             <li>Banco de dados.</li>
             <li>Página Web.</li>
         </ul>
@@ -41,7 +41,7 @@
     </main>
 
     <aside>
-      <h3 align="center"> Alunos do projeto
+      <h3 align="center"> Alunos do projeto.
       <img src="Foto da turma.png" alt="Foto da turma" height="300" width="380">
       <p>Foto da turma em março</p>
     </aside>
