--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
   <div class="conteudo">
     
     <div id="Montagem" class="painel"><h3>Montagem</h3>
-    <p>O grupo de montagem é composto por Fernando, Nelci, Daniel e Matheus.</p>
+     <p>O grupo de montagem é composto por Fernando, Nelci, Daniel e Matheus.</p>
   
-    <p>Inicialmente, será feito um levantamento de todos os componentes eletrônicos e sensores disponíveis para a montagem da estação meteorológica, como sensores de temperatura, umidade, pressão atmosférica, entre outros. Também serão verificados os dispositivos de processamento (como Arduino ou ESP32) e os módulos de comunicação (Wi-Fi, Bluetooth, etc.). Os componentes serão analisados para verificar se estão funcionando corretamente e para identificar cada um deles, registrando-os individualmente.</p>
-       <p>A montagem será realizada em bancada, seguindo um esquema de ligação previamente planejado. Os sensores serão conectados ao microcontrolador, e o sistema será alimentado por uma bateria e uma placa solar para recarregá-la.Será desenvolvido um código para a coleta, leitura e exibição dos dados meteorológicos. Após a programação, serão realizados testes para garantir o correto funcionamento dos sensores e a precisão das leituras. Caso necessário, ajustes serão feitos no código ou na montagem. Após os testes, a estação será posicionada em um local adequado para a coleta de dados ambientais. O sistema será monitorado por um período determinado para avaliar sua estabilidade, desempenho e confiabilidade.</p>
-      </p>
+    <p>Inicialmente, será feito um levantamento de todos os componentes eletrônicos e sensores disponíveis para a montagem da estação meteorológica, como sensores de temperatura, umidade, pressão atmosférica, entre outros. Também serão verificados os dispositivos de processamento (como Arduino ou ESP32) e os módulos de comunicação (Wi-Fi, Bluetooth, etc.). Os componentes serão analisados para verificar se estão funcionando corretamente e para identificar cada um deles, registrando-os individualmente.
+    </p>
+
+    <p>A montagem será realizada em bancada, seguindo um esquema de ligação previamente planejado. Os sensores serão conectados ao microcontrolador, e o sistema será alimentado por uma bateria e uma placa solar para recarregá-la.Será desenvolvido um código para a coleta, leitura e exibição dos dados meteorológicos. Após a programação, serão realizados testes para garantir o correto funcionamento dos sensores e a precisão das leituras. Caso necessário, ajustes serão feitos no código ou na montagem. Após os testes, a estação será posicionada em um local adequado para a coleta de dados ambientais. O sistema será monitorado por um período determinado para avaliar sua estabilidade, desempenho e confiabilidade.
+    </p>
+    </div>
+
+    <p>A montagem será realizada em bancada, seguindo um esquema de ligação previamente planejado. Os sensores serão conectados ao microcontrolador, e o sistema será alimentado por uma bateria e uma placa solar para recarregá-la.Será desenvolvido um código para a coleta, leitura e exibição dos dados meteorológicos. Após a programação, serão realizados testes para garantir o correto funcionamento dos sensores e a precisão das leituras. Caso necessário, ajustes serão feitos no código ou na montagem. Após os testes, a estação será posicionada em um local adequado para a coleta de dados ambientais. O sistema será monitorado por um período determinado para avaliar sua estabilidade, desempenho e confiabilidade.
+    </p>
+
     </div>
 
     <div id="Dados" class="painel">O grupo do banco de dados é composto por Fábio, Emmily, Eliane e Marcos.</div>
