--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="Introduçãotxt">
                 <h3>Micro Estação Meteorológica</h3>
                 <p align="center">
-                    <img src="https://static6.depositphotos.com/1007113/582/i/950/depositphotos_5822106-stock-photo-weather-station.jpg" 
+                    <img src="Ilustração.jpeg" 
                     alt="Ilustração do projeto">
                 </p>
 
