--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
 
                 <p>Nós, alunos do curso técnico de Informática da escola de Cuiabá, desenvolvemos um projeto integrador com o objetivo de construir uma micro estação meteorológica. 
-                    Utilizando microcontroladores como ESP32 ou Arduino e sensores específicos, o sistema coleta dados ambientais — como temperatura, umidade, precipitação e vento — e os envia para uma plataforma online para visualização em tempo real. Também somos responsáveis pela criação da página web que exibe essas informações aos usuários.</p> 
+                    Utilizando microcontroladores como ESP32 ou Arduino e sensores específicos, o sistema coleta dados ambientais como temperatura, umidade, precipitação e vento, depois os envia para uma plataforma online para visualização em tempo real. Também somos responsáveis pela criação da página web que exibe essas informações aos usuários.</p> 
                     
                 <p>Este projeto permite aplicar, de forma prática e interdisciplinar, os conhecimentos adquiridos em programação, robótica e desenvolvimento web, além de desenvolver habilidades como trabalho em equipe, inovação e resolução de problemas, demonstrando o papel da tecnologia no monitoramento ambiental.</p>
             </div>
